[package]
name = "namethingy"
version = "0.1.0"
authors = ["Abhilash Meesala <mail@abhilashm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "namethingy"
path = "src/lib.rs"

[dependencies]
rand = "0.7.3"
clap = "2.33.1"
